<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content" android:orientation="horizontal" android:background="@color/color_sign_in_header_bkg" android:gravity="center_vertical">
		<ImageView
			android:id="@+id/img_close"
			android:layout_width="wrap_content"
			android:layout_height="match_parent" android:src="@drawable/icon_close_white" />
	<TextView
		android:id="@+id/txt_title"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minWidth="400dp"
		android:textColor="@color/color_sign_in_header_text"
		android:layout_weight="1"
		android:padding="5dp"
		android:gravity="center"/>

	</LinearLayout>
    <ScrollView android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" >

		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">


			<LinearLayout
				android:id="@+id/ll_face"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"></LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical"
				android:padding="5dp">

				<LinearLayout
					android:id="@+id/ll_sign_out"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:id="@+id/txt_hello"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="Hello!"
						android:textColor="@color/textGray" />

					<Button
						android:id="@+id/btn_sign_out"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="2dp"
						android:layout_marginBottom="7dp"
						android:text="@string/txt_sign_out" />
				</LinearLayout>

				<LinearLayout
					android:id="@+id/ll_sign_in"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<LinearLayout
						android:id="@+id/ll_name"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<TextView
							android:id="@+id/txt_name"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/txt_name"
							android:textColor="@color/textGray"
							android:textStyle="bold" />

						<EditText
							android:id="@+id/et_first"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:ems="10"
							android:hint="@string/caption_name"
							android:inputType="textPersonName"
							android:textColor="@color/textGray" />

						<EditText
							android:id="@+id/et_last"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:ems="10"
							android:hint="@string/caption_lastname"
							android:inputType="textPersonName"
							android:textColor="@color/textGray" />
					</LinearLayout>

					<LinearLayout
						android:id="@+id/ll_username"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<RadioGroup
							android:id="@+id/rdb_group_user"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="horizontal">

							<RadioButton
								android:id="@+id/rdb_use_code"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:freezesText="false"
								android:text="@string/rdb_use_code"
								android:textColor="@color/textGray" />

							<View
								android:layout_width="0dp"
								android:layout_height="match_parent"
								android:layout_weight="1" />

							<RadioButton
								android:id="@+id/rdb_use_tel"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:text="@string/rdb_use_tel"
								android:textColor="@color/textGray" />

							<View
								android:layout_width="0dp"
								android:layout_height="match_parent"
								android:layout_weight="1" />

							<RadioButton
								android:id="@+id/rdb_use_email"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:checked="true"
								android:text="@string/rdb_use_email"
								android:textColor="@color/textGray" />

						</RadioGroup>

						<LinearLayout
							android:id="@+id/ll_use_phone"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical">

							<TextView
								android:id="@+id/txt_mobile_num"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/txt_mobile_num"
								android:textColor="@color/textGray" />

							<LinearLayout
								android:id="@+id/ll_phone"
								android:layout_width="match_parent"
								android:layout_height="match_parent"
								android:orientation="horizontal">

								<Spinner
									android:id="@+id/spinner_code"
									android:layout_width="wrap_content"
									android:layout_height="wrap_content"
									android:entries="@array/array_country_code"
									android:minWidth="50dp"

									android:textColor="@color/textGray" />

								<EditText

									android:id="@+id/et_phone"
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:layout_weight="1"
									android:ems="10"
									android:hint="@string/caption_phone"
									android:inputType="phone"
									android:maxLength="11"
									android:selectAllOnFocus="true"
									android:singleLine="true"
									android:textColor="@color/textGray" />
							</LinearLayout>
						</LinearLayout>

						<LinearLayout
							android:id="@+id/ll_use_email"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical">

							<TextView
								android:id="@+id/txt_email"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/txt_email"
								android:textColor="@color/textGray" />

							<EditText
								android:id="@+id/et_email"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:ems="10"
								android:hint="@string/caption_email"
								android:inputType="textEmailAddress"
								android:selectAllOnFocus="true"
								android:textColor="@color/textGray" />
						</LinearLayout>

						<LinearLayout
							android:id="@+id/ll_use_code"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical">

							<TextView
								android:id="@+id/txt_code"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/txt_code"
								android:textColor="@color/textGray" />

							<EditText
								android:id="@+id/et_code"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:ems="10"
								android:hint="@string/caption_code"
								android:inputType="textEmailAddress"
								android:selectAllOnFocus="true"
								android:textColor="@color/textGray" />
						</LinearLayout>
					</LinearLayout>

					<LinearLayout
						android:id="@+id/ll_recover"
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

						<TextView
							android:id="@+id/txt_recover_code"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/txt_recover_code"
							android:textColor="@color/textGray" />

						<EditText
							android:id="@+id/et_recover_code"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:ems="10"
							android:hint="@string/caption_recover_code"
							android:inputType="textPersonName"
							android:textColor="@color/textGray" />

					</LinearLayout>

					<LinearLayout
						android:id="@+id/ll_pass"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<LinearLayout
							android:id="@+id/ll_pass1"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical">

							<TextView
								android:id="@+id/txt_password"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/txt_password"
								android:textColor="@color/textGray" />

							<EditText
								android:id="@+id/et_password"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:ems="10"
								android:hint="@string/caption_password"
								android:inputType="textPassword"
								android:selectAllOnFocus="true"
								android:textColor="@color/textGray" />

						</LinearLayout>

						<LinearLayout
							android:id="@+id/ll_pass2"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:orientation="vertical">

							<TextView
								android:id="@+id/txt_password2"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:text="@string/txt_password_repeat"
								android:textColor="@color/textGray" />

							<EditText
								android:id="@+id/et_password2"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:ems="10"
								android:hint="@string/caption_password_repeat"
								android:inputType="textPassword"
								android:selectAllOnFocus="true"
								android:textColor="@color/textGray" />
						</LinearLayout>

						<CheckBox
							android:id="@+id/switch_show_pass"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:text="@string/txt_show_password"
							android:textColor="@color/textGray" />
					</LinearLayout>

					<CheckBox
						android:id="@+id/chbx_aggree"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/txt_agree"
						android:textColor="?android:attr/textColorLink" />

					<Button
						android:id="@+id/btn_ok"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="2dp"
						android:layout_marginBottom="7dp"
						android:text="@string/btn_login" />

				</LinearLayout>

				<TextView
					android:id="@+id/txt_sign_up"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:text="@string/txt_sign_up"
					android:textColor="?android:attr/textColorLink"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/txt_sign_in"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:text="@string/txt_already_sign_up"
					android:textColor="?android:attr/textColorLink"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/txt_update"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:text="@string/txt_sign_update"
					android:textColor="?android:attr/textColorLink"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/txt_recover_pass"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:text="@string/txt_forgot_pass"
					android:textColor="?android:attr/textColorLink"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/txt_recover_enter_code"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:text="@string/txt_recover_enter_code"
					android:textColor="?android:attr/textColorLink"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/txt_complete_profile"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:text="@string/txt_complete_profile"
					android:textColor="?android:attr/textColorLink"
					android:textStyle="bold" />

				<TextView
					android:id="@+id/txt_license"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:text="@string/txt_license_title"
					android:textColor="?android:attr/textColorLink"
					android:textStyle="bold" />
			</LinearLayout>
		</LinearLayout>
    </ScrollView>
</LinearLayout>