<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"

	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<com.avito.android.krop.KropView
		android:id="@+id/krop_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		app:krop_aspectX="1"
		app:krop_aspectY="1"
		app:krop_offset="24dp"
		app:krop_overlayColor="#a2007e65">

	</com.avito.android.krop.KropView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/btn_from_cam"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:drawableRight="@android:drawable/ic_menu_camera"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:paddingLeft="15dp"
			android:paddingTop="0dp"
			android:paddingRight="5dp"
			android:paddingBottom="0dp"
			android:singleLine="true"
			android:text="@string/btn_from_cam" />

		<Button
			android:id="@+id/btn_from_gallery"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:drawableRight="@android:drawable/ic_menu_gallery"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:paddingLeft="15dp"
			android:paddingTop="0dp"
			android:paddingRight="5dp"
			android:paddingBottom="0dp"
			android:singleLine="true"
			android:text="@string/btn_from_gallery" />

		<Button
			android:id="@+id/btn_ok"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:drawableRight="@drawable/icon_ok"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:paddingLeft="15dp"
			android:paddingTop="0dp"
			android:paddingRight="5dp"
			android:paddingBottom="0dp"
			android:singleLine="true"
			android:text="@string/btn_set_profile_image" />

		<Button
			android:id="@+id/btn_rotate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="2dp"
			android:layout_marginRight="2dp"
			android:layout_weight="1"
			android:drawableRight="@android:drawable/ic_menu_rotate"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:paddingLeft="15dp"
			android:paddingTop="0dp"
			android:paddingRight="5dp"
			android:paddingBottom="0dp"
			android:singleLine="true"
			android:text="@string/btn_rotate" />

	</LinearLayout>
</LinearLayout>